--- a/calculadora.html
+++ b/calculadora.html
@@ -1,7 +1,13 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
+		<title>Calculadora</title>
 	</head>
 	<body>
+		<table bgColor="black" border="0" align="center" cellpadding="2" cellspacing="0">
+			<tr><td colspan="4"><input type="text" class="caixa1 caixa" name="caixa1">
+				<br>
+				<input type="text" class="caixa2 caixa" name="caixa2" value="0"></td></tr>
+		</table>
 	</body>
 </html>
