Afegeixo la primera filera de botons

--- a/calculadora.html
+++ b/calculadora.html
@@ -8,6 +8,11 @@
 			<tr><td colspan="4"><input type="text" class="caixa1 caixa" name="caixa1">
 				<br>
 				<input type="text" class="caixa2 caixa" name="caixa2" value="0"></td></tr>
+			<!-- Primera filera de botons-->
+				<tr><th><INPUT TYPE="button" class="boto" Id="7" VALUE="7"></th>
+				<th><INPUT TYPE="button" class="boto" Id="8" VALUE="8" ></th>
+				<th><INPUT TYPE="button" class="boto" Id="9" VALUE="9" ></th>
+				<th><INPUT TYPE="button" class="boto" Id="/" VALUE="/" ></th></tr>
 		</table>
 	</body>
 </html>
