Afegeixo la segona filera de botons

--- a/calculadora.html
+++ b/calculadora.html
@@ -13,6 +13,11 @@
 				<th><INPUT TYPE="button" class="boto" Id="8" VALUE="8" ></th>
 				<th><INPUT TYPE="button" class="boto" Id="9" VALUE="9" ></th>
 				<th><INPUT TYPE="button" class="boto" Id="/" VALUE="/" ></th></tr>
+			<!-- Segona filera de botons-->
+				<tr><th><INPUT TYPE="button" class="boto" Id="4" VALUE="4" ></th>
+				<th><INPUT TYPE="button" class="boto" Id="5" VALUE="5" ></th>
+				<th><INPUT TYPE="button" class="boto" Id="6" VALUE="6" ></th>
+				<th><INPUT TYPE="button" class="boto" Id="x" VALUE="*" ></th>
 		</table>
 	</body>
 </html>
