Afegeixo la terçera filera de botons

--- a/calculadora.html
+++ b/calculadora.html
@@ -18,6 +18,11 @@
 				<th><INPUT TYPE="button" class="boto" Id="5" VALUE="5" ></th>
 				<th><INPUT TYPE="button" class="boto" Id="6" VALUE="6" ></th>
 				<th><INPUT TYPE="button" class="boto" Id="x" VALUE="*" ></th>
+			<!-- Terçera filera de botons-->
+				<tr><th><INPUT TYPE="button" class="boto" Id="1" VALUE="1" ></th>
+				<th><INPUT TYPE="button" class="boto" Id="2" VALUE="2" ></th>
+				<th><INPUT TYPE="button" class="boto" Id="3" VALUE="3" ></th>
+				<th><INPUT TYPE="button" class="boto" Id="-" VALUE="-" ></th></tr>
 		</table>
 	</body>
 </html>
