Afegeixo la quarta filera de botons

--- a/calculadora.html
+++ b/calculadora.html
@@ -23,6 +23,11 @@
 				<th><INPUT TYPE="button" class="boto" Id="2" VALUE="2" ></th>
 				<th><INPUT TYPE="button" class="boto" Id="3" VALUE="3" ></th>
 				<th><INPUT TYPE="button" class="boto" Id="-" VALUE="-" ></th></tr>
+			<!-- Quarta filera de botons-->
+				<tr><th><INPUT TYPE="button" class="boto" Id="0" VALUE="0" ></th>
+				<th><INPUT TYPE="button" class="boto" Id="." VALUE="." ></th>
+				<th><INPUT TYPE="button" class="boto" Id="=" VALUE="=" ></th>
+				<th><INPUT TYPE="button" class="boto" Id="+" VALUE="+" ></th></tr>
 		</table>
 	</body>
 </html>
