Afegeixo la cinquena filera de botons

--- a/calculadora.html
+++ b/calculadora.html
@@ -28,6 +28,9 @@
 				<th><INPUT TYPE="button" class="boto" Id="." VALUE="." ></th>
 				<th><INPUT TYPE="button" class="boto" Id="=" VALUE="=" ></th>
 				<th><INPUT TYPE="button" class="boto" Id="+" VALUE="+" ></th></tr>
+				<!-- Cinquena filera de botons-->
+				<tr><th colspan="2"><INPUT TYPE="button" class="boto" Id="borrar" VALUE="C" ></th>
+				<th colspan="2"><INPUT TYPE="button" class="boto" Id="borrar" VALUE="CE" ></th></tr>
 		</table>
 	</body>
 </html>
