Afegeixo estil a les caixes de text

--- a/calculadora.html
+++ b/calculadora.html
@@ -2,6 +2,27 @@
 <html>
 	<head>
 		<title>Calculadora</title>
+		<style>
+			.caixa{
+
+			background-color:white;
+
+			border:0px;
+
+			width:250px;
+
+			height: 40px;
+
+			font-size: 20px;
+
+			color: black;
+
+			text-align: right;
+
+			pointer-events: none;
+
+			}
+		</style>
 	</head>
 	<body>
 		<table bgColor="black" border="0" align="center" cellpadding="2" cellspacing="0">
