Afegeixo mes estils per les dues caixes

--- a/calculadora.html
+++ b/calculadora.html
@@ -22,6 +22,21 @@
 			pointer-events: none;
 
 			}
+			.caixa1{
+
+			height: 20px;
+
+			font-size: 16px;
+
+			}
+
+			.caixa2{
+
+			margin-bottom: 5px;
+
+			font-size: 26px;
+
+			}
 		</style>
 	</head>
 	<body>
