--- a/calculadora.html
+++ b/calculadora.html
@@ -37,6 +37,25 @@
 			font-size: 26px;
 
 			}
+			.boto{
+
+				font-size: 18px;
+
+				font-weight:lighter;
+
+				font-family:Segoe, "Segoe UI", "DejaVu Sans", "Trebuchet MS", Verdana, "sans-serif";
+
+				width:60px;border:0px;
+
+				height: 60px;
+
+				color: white;
+
+				background-color:blue;
+
+				margin-bottom: 5px;
+
+			}
 		</style>
 	</head>
 	<body>
