Afegeixo la forma per als scripts i l'etiqueta

--- a/calculadora.html
+++ b/calculadora.html
@@ -59,33 +59,37 @@
 		</style>
 	</head>
 	<body>
-		<table bgColor="black" border="0" align="center" cellpadding="2" cellspacing="0">
-			<tr><td colspan="4"><input type="text" class="caixa1 caixa" name="caixa1">
-				<br>
-				<input type="text" class="caixa2 caixa" name="caixa2" value="0"></td></tr>
-			<!-- Primera filera de botons-->
-				<tr><th><INPUT TYPE="button" class="boto" Id="7" VALUE="7"></th>
-				<th><INPUT TYPE="button" class="boto" Id="8" VALUE="8" ></th>
-				<th><INPUT TYPE="button" class="boto" Id="9" VALUE="9" ></th>
-				<th><INPUT TYPE="button" class="boto" Id="/" VALUE="/" ></th></tr>
-			<!-- Segona filera de botons-->
-				<tr><th><INPUT TYPE="button" class="boto" Id="4" VALUE="4" ></th>
-				<th><INPUT TYPE="button" class="boto" Id="5" VALUE="5" ></th>
-				<th><INPUT TYPE="button" class="boto" Id="6" VALUE="6" ></th>
-				<th><INPUT TYPE="button" class="boto" Id="x" VALUE="*" ></th>
-			<!-- Terçera filera de botons-->
-				<tr><th><INPUT TYPE="button" class="boto" Id="1" VALUE="1" ></th>
-				<th><INPUT TYPE="button" class="boto" Id="2" VALUE="2" ></th>
-				<th><INPUT TYPE="button" class="boto" Id="3" VALUE="3" ></th>
-				<th><INPUT TYPE="button" class="boto" Id="-" VALUE="-" ></th></tr>
-			<!-- Quarta filera de botons-->
-				<tr><th><INPUT TYPE="button" class="boto" Id="0" VALUE="0" ></th>
-				<th><INPUT TYPE="button" class="boto" Id="." VALUE="." ></th>
-				<th><INPUT TYPE="button" class="boto" Id="=" VALUE="=" ></th>
-				<th><INPUT TYPE="button" class="boto" Id="+" VALUE="+" ></th></tr>
-				<!-- Cinquena filera de botons-->
-				<tr><th colspan="2"><INPUT TYPE="button" class="boto" Id="borrar" VALUE="C" ></th>
-				<th colspan="2"><INPUT TYPE="button" class="boto" Id="borrar" VALUE="CE" ></th></tr>
-		</table>
+		<form name="forma"><br>
+			<table bgColor="black" border="0" align="center" cellpadding="2" cellspacing="0">
+				<tr><td colspan="4"><input type="text" class="caixa1 caixa" name="caixa1">
+					<br>
+					<input type="text" class="caixa2 caixa" name="caixa2" value="0"></td></tr>
+				<!-- Primera filera de botons-->
+					<tr><th><INPUT TYPE="button" class="boto" Id="7" VALUE="7"></th>
+					<th><INPUT TYPE="button" class="boto" Id="8" VALUE="8" ></th>
+					<th><INPUT TYPE="button" class="boto" Id="9" VALUE="9" ></th>
+					<th><INPUT TYPE="button" class="boto" Id="/" VALUE="/" ></th></tr>
+				<!-- Segona filera de botons-->
+					<tr><th><INPUT TYPE="button" class="boto" Id="4" VALUE="4" ></th>
+					<th><INPUT TYPE="button" class="boto" Id="5" VALUE="5" ></th>
+					<th><INPUT TYPE="button" class="boto" Id="6" VALUE="6" ></th>
+					<th><INPUT TYPE="button" class="boto" Id="x" VALUE="*" ></th>
+				<!-- Terçera filera de botons-->
+					<tr><th><INPUT TYPE="button" class="boto" Id="1" VALUE="1" ></th>
+					<th><INPUT TYPE="button" class="boto" Id="2" VALUE="2" ></th>
+					<th><INPUT TYPE="button" class="boto" Id="3" VALUE="3" ></th>
+					<th><INPUT TYPE="button" class="boto" Id="-" VALUE="-" ></th></tr>
+				<!-- Quarta filera de botons-->
+					<tr><th><INPUT TYPE="button" class="boto" Id="0" VALUE="0" ></th>
+					<th><INPUT TYPE="button" class="boto" Id="." VALUE="." ></th>
+					<th><INPUT TYPE="button" class="boto" Id="=" VALUE="=" ></th>
+					<th><INPUT TYPE="button" class="boto" Id="+" VALUE="+" ></th></tr>
+					<!-- Cinquena filera de botons-->
+					<tr><th colspan="2"><INPUT TYPE="button" class="boto" Id="borrar" VALUE="C" ></th>
+					<th colspan="2"><INPUT TYPE="button" class="boto" Id="borrar" VALUE="CE" ></th></tr>
+			</table>
+		</form>
+		<script type="text/javascript">
+		</script>
 	</body>
 </html>
