afegeixo la funcio escriure

--- a/calculadora.html
+++ b/calculadora.html
@@ -65,22 +65,22 @@
 					<br>
 					<input type="text" class="caixa2 caixa" name="caixa2" value="0"></td></tr>
 				<!-- Primera filera de botons-->
-					<tr><th><INPUT TYPE="button" class="boto" Id="7" VALUE="7"></th>
-					<th><INPUT TYPE="button" class="boto" Id="8" VALUE="8" ></th>
-					<th><INPUT TYPE="button" class="boto" Id="9" VALUE="9" ></th>
+					<tr><th><INPUT TYPE="button" class="boto" Id="7" VALUE="7" onclick="escriure(this.value)"></th>
+					<th><INPUT TYPE="button" class="boto" Id="8" VALUE="8" onclick="escriure(this.value)"></th>
+					<th><INPUT TYPE="button" class="boto" Id="9" VALUE="9" onclick="escriure(this.value)"></th>
 					<th><INPUT TYPE="button" class="boto" Id="/" VALUE="/" ></th></tr>
 				<!-- Segona filera de botons-->
-					<tr><th><INPUT TYPE="button" class="boto" Id="4" VALUE="4" ></th>
-					<th><INPUT TYPE="button" class="boto" Id="5" VALUE="5" ></th>
-					<th><INPUT TYPE="button" class="boto" Id="6" VALUE="6" ></th>
+					<tr><th><INPUT TYPE="button" class="boto" Id="4" VALUE="4" onclick="escriure(this.value)"></th>
+					<th><INPUT TYPE="button" class="boto" Id="5" VALUE="5" onclick="escriure(this.value)"></th>
+					<th><INPUT TYPE="button" class="boto" Id="6" VALUE="6" onclick="escriure(this.value)"></th>
 					<th><INPUT TYPE="button" class="boto" Id="x" VALUE="*" ></th>
 				<!-- Terçera filera de botons-->
-					<tr><th><INPUT TYPE="button" class="boto" Id="1" VALUE="1" ></th>
-					<th><INPUT TYPE="button" class="boto" Id="2" VALUE="2" ></th>
-					<th><INPUT TYPE="button" class="boto" Id="3" VALUE="3" ></th>
+					<tr><th><INPUT TYPE="button" class="boto" Id="1" VALUE="1" onclick="escriure(this.value)"></th>
+					<th><INPUT TYPE="button" class="boto" Id="2" VALUE="2" onclick="escriure(this.value)"></th>
+					<th><INPUT TYPE="button" class="boto" Id="3" VALUE="3" onclick="escriure(this.value)"></th>
 					<th><INPUT TYPE="button" class="boto" Id="-" VALUE="-" ></th></tr>
 				<!-- Quarta filera de botons-->
-					<tr><th><INPUT TYPE="button" class="boto" Id="0" VALUE="0" ></th>
+					<tr><th><INPUT TYPE="button" class="boto" Id="0" VALUE="0" onclick="escriure(this.value)"></th>
 					<th><INPUT TYPE="button" class="boto" Id="." VALUE="." ></th>
 					<th><INPUT TYPE="button" class="boto" Id="=" VALUE="=" ></th>
 					<th><INPUT TYPE="button" class="boto" Id="+" VALUE="+" ></th></tr>
@@ -90,6 +90,21 @@
 			</table>
 		</form>
 		<script type="text/javascript">
+			function escriure(n){
+		
+				var caixa2 = document.forma.caixa2.value;
+		
+				if (borrar) {
+		
+					document.forma.caixa2.value="";
+		
+					borrar = false;
+		
+					document.forma.caixa2.value = n;
+		
+				}
+			}
+			
 		</script>
 	</body>
 </html>
