Modifico la funcio escriure per a que escrigui mes d'una paraula

--- a/calculadora.html
+++ b/calculadora.html
@@ -90,18 +90,18 @@
 			</table>
 		</form>
 		<script type="text/javascript">
-			function escriure(n){
-		
+		   function escriure(n){
 				var caixa2 = document.forma.caixa2.value;
-		
 				if (borrar) {
-		
 					document.forma.caixa2.value="";
-		
 					borrar = false;
-		
 					document.forma.caixa2.value = n;
-		
+				}else if (caixa2 == "0" && n != "."){
+					cajao = caixa2.replace("0", "")
+					document.forma.caixa2.value = cajao + n;
+				}
+				else{
+					document.forma.caixa2.value = caixa2 + n;
 				}
 			}
 			
