--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/bowser/1.9.4/bowser.min.js"></script>
 		<title>Pagina principal</title>
 	</head>
 	<body>
@@ -11,6 +12,7 @@
 			<button onclick="window.location.href='calculadora.html'" >Calculadora</button>
 			<button onclick="history.back()" >Enrere</button>
 			<button onclick="history.go()" >Refresca</button>
+			<button onclick="window.location.href='informe.html'" >Informe</button>
 		</div>
 	</body>
 </html>
