--- a/informe.html
+++ b/informe.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/bowser/1.9.4/bowser.min.js"></script>
+		<title>Informe</title>
 	</head>
 		<body>
 			<button onclick="history.back()" >Enrere</button>
