--- a/informe.html
+++ b/informe.html
@@ -25,6 +25,7 @@
 				document.write('<br><b>El teu sistema operatiu es: </b>'+OSName);
 				document.write('<br><b>El teu idioma es: </b>'+window.navigator.language);
 				document.write('<br><b>El teu hostname es: </b>'+window.location.href);
+				document.write('<br><b>La darrera modificacio del document es va produir: </b>'+document.lastModified);
 			</script>
 	</body>
 </html>
