--- a/informe.html
+++ b/informe.html
@@ -26,6 +26,7 @@
 				document.write('<br><b>El teu idioma es: </b>'+window.navigator.language);
 				document.write('<br><b>El teu hostname es: </b>'+window.location.href);
 				document.write('<br><b>La darrera modificacio del document es va produir: </b>'+document.lastModified);
+				document.writeln('<br><b>Resolucio de la pantalla: </b>'+screen.width + " x " + screen.height);
 			</script>
 	</body>
 </html>
