--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 			<button onclick="history.back()" >Enrere</button>
 			<button onclick="history.go()" >Refresca</button>
 			<button onclick="window.location.href='informe.html'" >Informe</button>
+			<button onclick="window.location.href='resolucio.html'" >Edita la resolucio</button>
 		</div>
 	</body>
 </html>
