--- a/calculadora.html
+++ b/calculadora.html
@@ -36,7 +36,7 @@
 					<th><INPUT TYPE="button" class="boto operador" Id="+" VALUE="+" onClick="operacio('+')"></th></tr>
 					<!-- Cinquena filera de botons-->
 					<tr><th colspan="2"><INPUT TYPE="button" class="boto borra" Id="borrar" VALUE="C" onClick="document.forma.reset(); blocdel = false;"></th>
-					<th colspan="2"><INPUT TYPE="button" class="boto borra" Id="borrar" VALUE="CE" onClick="document.forma.caixa2.value='0'"></th></tr>
+					<th colspan="2"><INPUT TYPE="button" class="boto borra" Id="borrar" VALUE="CE" onClick="esborraUn()"></th></tr>
 			</table>
 		</form>
 	</body>
