--- a/resolucio.html
+++ b/resolucio.html
@@ -44,7 +44,7 @@
 						
 						sessionStorage.setItem("alcada",alcada);
 						sessionStorage.setItem("amplada",amplada);
-						alert("Tot correcte");
+						alert("Tot correcte s'han desat els valors: Alcada->"+alcada+" Amplada->"+amplada);
 					}
 				}
 				
