--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 		<title>Pagina principal</title>
 	</head>
 	<body>
@@ -8,11 +9,11 @@
 		<br>
 		<br>
 		<div align="center">
-			<button onclick="window.location.href='calculadora.html'" >Calculadora</button>
-			<button onclick="history.back()" >Enrere</button>
-			<button onclick="history.go()" >Refresca</button>
-			<button onclick="window.location.href='informe.html'" >Informe</button>
-			<button onclick="window.location.href='resolucio.html'" >Edita la resolucio</button>
+			<button class="btn btn-danger" onclick="window.location.href='calculadora.html'" >Calculadora</button>
+			<button class="btn btn-secondary" onclick="history.back()" >Enrere</button>
+			<button class="btn btn-light" onclick="history.go()" >Refresca</button>
+			<button class="btn btn-warning" onclick="window.location.href='informe.html'" >Informe</button>
+			<button class="btn btn-info" onclick="window.location.href='resolucio.html'" >Edita la resolucio</button>
 		</div>
 	</body>
 </html>
