--- a/calculadora.html
+++ b/calculadora.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 		<link rel="stylesheet" href="estils.css">
 		<script src="js.js"></script>
 		<title>Calculadora</title>
@@ -11,6 +12,8 @@
 		</script>
 	</head>
 	<body>
+		<button class="btn btn-secondary" onclick="history.back()" >Enrere</button>
+		<button class="btn btn-light" onclick="history.go()" >Refresca</button>
 		<form name="forma"><br>
 			<div class="prosicionar">
 			<table bgColor="black" border="0" align="center" cellpadding="2" cellspacing="0">
