--- a/resolucio.html
+++ b/resolucio.html
@@ -22,8 +22,12 @@
 			<button class="btn btn-light" onclick="history.go()" >Refresca</button>
 			<br><br><br><br>
 			<form name="forma">
+			Amplada: 
 			<input type="number" id="amplada" autofocus required step="10" placeholder="Ex: 10" max="pantallaAm" title="incermenta 10 pixels d'amplada">
+			<br>
+			Alcada:
 			<input type="number" id="alcada" required step="10" placeholder="Ex: 10" max="pantallaAl" title="incermenta 10 pixels d'alcada">
+			<br><br>
 			<input type="submit" onclick="comprobarCorrecte()">
 			</form>
 			<br><br><br><br>
